status align fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,9 @@ html, body { height: 100%;
   background-image: linear-gradient(black,blueviolet);
 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.right-aligned-header > .mat-content {
+  justify-content: space-between;
+}
+.mat-content > mat-panel-description {
+flex: 0 0 auto;
+}
